# alohomora

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  TrainOfThought.md  challenge-notes.md  docker-compose.yml
.github/workflows/: main.yml
docs/: BusinessRequirements.md  TrainOfThought.md  credit_score_integration.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: app.js  main.js  style.css
project/: Dockerfile  Dockerfile.prod  TrainOfThought.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  update_requirements.sh
project/app/: config.py  db.py  entities.py  helper.py  main.py  models.py  orm.py  repository.py  services.py
project/app/api/: loans.py  ping.py
project/docs/: database.md  integration-score-credit-service.md
project/tests/: conftest.py  pytest.ini  test_api.py  test_domain.py  test_orm.py  test_ping.py  test_repository.py
