[tool.ruff]
# Same as Black.
line-length = 88

[tool.ruff.lint]
# Enable pycodestyle (`E`), Pyflakes (`F`), and import sorting (`I`) codes
select = ["E", "F", "I", "B", "C4", "UP", "N", "W", "Q"]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "B006",  # do not use mutable data structures for argument defaults
    "B905",  # zip() without an explicit strict= parameter
]

# Allow autofix for all enabled rules (when `--fix` is used)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
    "alembic",
    "__pycache__",
    "*.pyc",
    "*.pyo",
    "*.pyd",
    ".Python",
    "*.so",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true
force-wrap-aliases = true
lines-after-imports = 2

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"