[tool.poetry]
name = "alohomora"
version = "0.1.0"
description = "Loan Management System"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.12"
pydantic-settings = "2.8.1"
uvicorn = "0.34.1"
asyncpg = "0.30.0"
httpx = "0.28.1"
gunicorn = "22.0.0"
sqlalchemy = {extras = ["asyncio"], version = "2.0.28"}
psycopg2-binary = "2.9.9"
requests = "2.32.3"
pytest-asyncio = "0.24.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.3.4"
pytest = "8.3.5"
pytest-cov = "6.1.1"
pre-commit = "3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Enable pycodestyle (`E`), Pyflakes (`F`), and import sorting (`I`) codes
select = ["E", "F", "I", "B", "C4", "UP", "N", "W", "Q"]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "B006",  # do not use mutable data structures for argument defaults
    "B905",  # zip() without an explicit strict= parameter
]

# Allow autofix for all enabled rules (when `--fix` is used)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
    "alembic",
    "__pycache__",
    "*.pyc",
    "*.pyo",
    "*.pyd",
    ".Python",
    "*.so",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true
force-wrap-aliases = true
lines-after-imports = 2

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10